fixes expand on mobile, removes vue-images-loaded

--- a/public/assets/sass/pokemon-list.sass
+++ b/public/assets/sass/pokemon-list.sass
@@ -51,6 +51,7 @@
 		flex-grow: 1
 		position: relative
 		& > *
+			pointer-events: none
 .stat-block
 	&__label
 		font:
